--- a/nanoplm/templates/all-clients.html
+++ b/nanoplm/templates/all-clients.html
@@ -1,2 +1,42 @@
+<style>
+    table, th, td {
+      border: 1px solid black;
+      margin-top: 1rem;
+    }
+    
+    td {
+        padding-right: 0.6rem;
+    }
+    
+    th {
+        padding-left: 0.6rem;
+        padding-right: 0.6rem;
+    }
+</style>
 <h1>Alle Kunden</h1>
 <button onclick="showCreateClient()">Neuer Kunde</button>
+<table>
+    <tr>
+        <th>Name</th>
+        <th>UUID</th>
+        <th>Erstellungsdatum</th>
+        <th>Aktionen</th>
+    </tr>
+    {% for client in clients %}
+    <tr>
+        <td><a href="{{ url_for('read_client', client_uuid = client.uuid) }}">{{ client.name }}</a></td>
+        <td>{{ client.uuid }}</td>
+        <td>{{ client.date_created }}</td>
+        <td>
+            <a href="{{ url_for('update_client', client_uuid = client.uuid) }}">bearbeiten</a>
+            <br>
+            <a href="{{ url_for('delete_client', client_uuid = client.uuid) }}">entfernen</a>
+        </td>
+    </tr>
+    {% endfor %}
+</table>
+<script>
+    function showCreateClient(){
+        window.top.document.getElementById("main-view-iframe").src = "{{ url_for('create_client') }}";
+    }
+</script>
