--- a/nanoplm/templates/all-files.html
+++ b/nanoplm/templates/all-files.html
@@ -1,2 +1,44 @@
+<style>
+    table, th, td {
+      border: 1px solid black;
+      margin-top: 1rem;
+    }
+    
+    td {
+        padding-right: 0.6rem;
+    }
+    
+    th {
+        padding-left: 0.6rem;
+        padding-right: 0.6rem;
+    }
+</style>
 <h1>Alle Dateien</h1>
 <button onclick="showCreateFile()">Neue Datei</button>
+<table>
+    <tr>
+        <th>Name</th>
+        <th>UUID</th>
+        <th>Erstellungsdatum</th>
+        <th>Typ</th>
+        <th>Aktionen</th>
+    </tr>
+    {% for file in files %}
+    <tr>
+        <td><a href="{{ url_for('read_file', file_uuid = file.uuid) }}">{{ file.name }}</a></td>
+        <td>{{ file.uuid }}</td>
+        <td>{{ file.date_created }}</td>
+        <td>{{ file.type }}</td>
+        <td>
+            <a href="{{ url_for('update_file', file_uuid = file.uuid) }}">bearbeiten</a>
+            <br>
+            <a href="{{ url_for('delete_file', file_uuid = file.uuid) }}">entfernen</a>
+        </td>
+    </tr>
+    {% endfor %}
+</table>
+<script>
+    function showCreateFile(){
+        window.top.document.getElementById("main-view-iframe").src = "{{ url_for('create_file') }}";
+    }
+</script>
