--- a/nanoplm/templates/create-component-instance.html
+++ b/nanoplm/templates/create-component-instance.html
@@ -1,18 +1,10 @@
 <h1>Neue Instanz</h1>
-<form action="{{ url_for('create_component')}}" method="POST">
+<form action="{{ url_for('create_component_instance')}}" method="POST">
     {{ form.csrf_token }}
     <table>
         <tr>
-            <td>{{ form.name.label }}</td>
-            <td>{{ form.name(autocomplete="off") }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.description.label }}</td>
-            <td>{{ form.description(autocomplete="off") }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.type.label }}</td>
-            <td>{{ form.type(autocomplete="off") }}</td>
+            <td>{{ form.component.label }}</td>
+            <td>{{ form.component(autocomplete="off") }}</td>
         </tr>
         <tr>
             <td></td>
