--- a/nanoplm/templates/base-mainview.html
+++ b/nanoplm/templates/base-mainview.html
@@ -6,6 +6,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-5.3.3-dist/css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-icons-1.11.3/font/bootstrap-icons.min.css') }}">
 
     {% block style %}{% endblock style %}
 </head>
