--- a/nanoplm/templates/base.html
+++ b/nanoplm/templates/base.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-5.3.3-dist/css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-icons-1.11.3/font/bootstrap-icons.min.css') }}">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="48x48" href="{{ url_for('static', filename='nanoplm-logo.png') }}">
