--- a/nanoplm/templates/base.html
+++ b/nanoplm/templates/base.html
@@ -108,7 +108,7 @@
             <iframe id="main-view-iframe" src="{{ url_for('all_components') }}" frameborder="0" style="min-width: 100%; min-height: calc(100vh - 79px); max-height: calc(100vh - 79px); margin: 0; display: block;"></iframe>
         </div>
         <!-- Sidebar right -->
-        <div id="sidebar-right" class="col p-0" style="background-color: #f8f9fa; min-width: 319px; max-width: 319px; border-left: 1px solid lightgray; border-right: 1px solid lightgray; display: block;">
+        <div id="sidebar-right" class="col p-0" style="background-color: #f8f9fa; min-width: 319px; max-width: 319px; border-left: 1px solid lightgray; border-right: 1px solid lightgray; display: none;">
             <iframe id="sidebar-right-iframe" src="{{ url_for('module_help', module_name = 'all_components') }}" frameborder="0" style="min-width: 100%; min-height: calc(100vh - 79px); max-height: calc(100vh - 79px); margin: 0; display: block;"></iframe>
         </div>
     </div>
