--- a/nanoplm/templates/all-components-help.html
+++ b/nanoplm/templates/all-components-help.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <header>
-        <h1>Tutorial: Umgang mit Komponenten in NanoPLM</h1>
+        <h1>Umgang mit Komponenten in nanoPLM</h1>
     </header>
 
     <section>
@@ -38,7 +38,7 @@
     </section>
 
     <section>
-        <h2>Schritt 1: Anmeldung in NanoPLM</h2>
+        <h2>Schritt 1: Anmeldung in nanoPLM</h2>
         <p>Bevor Sie mit NanoPLM arbeiten können, müssen Sie sich mit Ihren Zugangsdaten anmelden. Folgen Sie diesen Schritten:</p>
         <ol>
             <li>Öffnen Sie die NanoPLM-Anwendung oder -Webseite.</li>
