--- a/nanoplm/templates/all-components.html
+++ b/nanoplm/templates/all-components.html
@@ -1,12 +1,6 @@
 {% extends "base-mainview.html"%}
 
-{% block style %}
-<style>
-    .btn-custom-list-delete:hover {
-        color: white;
-    }
-</style>
-{% endblock style %}
+{% block style %}{% endblock style %}
 
 {% block content %}
 <h1 class="mb-5">Alle Komponenten</h1>
