--- a/nanoplm/templates/all-files.html
+++ b/nanoplm/templates/all-files.html
@@ -1,44 +1,40 @@
-<style>
-    table, th, td {
-      border: 1px solid black;
-      margin-top: 1rem;
-    }
-    
-    td {
-        padding-right: 0.6rem;
-    }
-    
-    th {
-        padding-left: 0.6rem;
-        padding-right: 0.6rem;
-    }
-</style>
-<h1>Alle Dateien</h1>
-<button onclick="showCreateFile()">Neue Datei</button>
-<table>
-    <tr>
-        <th>Name</th>
-        <th>UUID</th>
-        <th>Erstellungsdatum</th>
-        <th>Typ</th>
-        <th>Aktionen</th>
-    </tr>
-    {% for file in files %}
-    <tr>
-        <td><a href="{{ url_for('read_file', file_uuid = file.uuid) }}">{{ file.name }}</a></td>
-        <td>{{ file.uuid }}</td>
-        <td>{{ file.date_created }}</td>
-        <td>{{ file.type }}</td>
-        <td>
-            <a href="{{ url_for('update_file', file_uuid = file.uuid) }}">bearbeiten</a>
-            <br>
-            <a href="{{ url_for('delete_file', file_uuid = file.uuid) }}">entfernen</a>
-        </td>
-    </tr>
-    {% endfor %}
+{% extends "base-mainview.html"%}
+
+{% block style %}{% endblock style %}
+
+{% block content %}
+<h1 class="mb-5">Alle Dateien</h1>
+<button type="button" class="btn btn-outline-dark mb-3" onclick="showCreateFile()"><i class="bi-plus-lg" style="padding-right: 6px;"></i>Neue Datei</button>
+<p class="mb-2">Es wurden {{ len(files) }} Dateien gefunden.</p>
+<table class="table table-striped" style="outline-style: solid; outline-color: lightgray; outline-width: 1px;">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>UUID</th>
+            <th>Erstellungsdatum</th>
+            <th>Aktionen</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for file in files %}
+        <tr>
+            <td><a href="{{ url_for('read_file', file_uuid = file.uuid) }}">{{ file.name }}</a></td>
+            <td>{{ file.uuid }}</td>
+            <td>{{ file.date_created }}</td>
+            <td>
+                <nobr>
+                    <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('read_file', file_uuid = file.uuid) }}"><i class="bi-eye"></i></a>
+                    <a class="btn btn-outline-secondary" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('update_file', file_uuid = file.uuid) }}"><i class="bi-pencil"></i></a>
+                    <a class="btn btn-outline-danger" style="padding-left: 10px; padding-right: 10px;" href="{{ url_for('delete_file', file_uuid = file.uuid) }}"><i class="bi-x-lg"></i></a>
+                </nobr>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
 </table>
 <script>
     function showCreateFile(){
         window.top.document.getElementById("main-view-iframe").src = "{{ url_for('create_file') }}";
     }
 </script>
+{% endblock content %}
