--- a/nanoplm/templates/create-component-instance.html
+++ b/nanoplm/templates/create-component-instance.html
@@ -1,9 +1,14 @@
-<h1>Neue Instanz</h1>
+{% extends "base-mainview.html"%}
+
+{% block style %}{% endblock style %}
+
+{% block content %}
+<h1 class="mb-5">Neue Instanz</h1>
 <form action="{{ url_for('create_component_instance')}}" method="POST">
     {{ form.csrf_token }}
     <table>
         <tr>
-            <td>{{ form.component.label }}</td>
+            <td>{{ form.component.label(style="padding-right: 10px;") }}</td>
             <td>{{ form.component(autocomplete="off") }}</td>
         </tr>
         <tr>
@@ -12,3 +17,4 @@
         </tr>
     </table>
 </form>
+{% endblock content %}
