--- a/nanoplm/templates/create-component.html
+++ b/nanoplm/templates/create-component.html
@@ -1,13 +1,18 @@
-<h1>Neue Komponente</h1>
+{% extends "base-mainview.html"%}
+
+{% block style %}{% endblock style %}
+
+{% block content %}
+<h1 class="mb-5">Neue Komponente</h1>
 <form action="{{ url_for('create_component')}}" method="POST">
     {{ form.csrf_token }}
     <table>
         <tr>
-            <td>{{ form.name.label }}</td>
+            <td>{{ form.name.label(style="padding-right: 10px;") }}</td>
             <td>{{ form.name(autocomplete="off") }}</td>
         </tr>
         <tr>
-            <td>{{ form.description.label }}</td>
+            <td>{{ form.description.label(style="padding-right: 10px;") }}</td>
             <td>{{ form.description(autocomplete="off") }}</td>
         </tr>
         <tr>
@@ -16,3 +21,4 @@
         </tr>
     </table>
 </form>
+{% endblock content %}
