--- a/nanoplm/templates/create-file.html
+++ b/nanoplm/templates/create-file.html
@@ -1,14 +1,15 @@
-<h1>Neue Datei</h1>
+{% extends "base-mainview.html"%}
+
+{% block style %}{% endblock style %}
+
+{% block content %}
+<h1 class="mb-5">Neue Datei</h1>
 <form action="{{ url_for('create_file')}}" method="POST">
     {{ form.csrf_token }}
     <table>
         <tr>
-            <td>{{ form.name.label }}</td>
+            <td>{{ form.name.label(style="padding-right: 10px;") }}</td>
             <td>{{ form.name(autocomplete="off") }}</td>
-        </tr>
-        <tr>
-            <td>{{ form.type.label }}</td>
-            <td>{{ form.type(autocomplete="off") }}</td>
         </tr>
         <tr>
             <td></td>
@@ -16,3 +17,4 @@
         </tr>
     </table>
 </form>
+{% endblock content %}
