--- a/nanoplm/templates/read-component.html
+++ b/nanoplm/templates/read-component.html
@@ -26,16 +26,16 @@
             <td>{{ component.description }}</td>
         </tr>
         <tr>
-            <td>Typ</td>
-            <td>{{ component.type }}</td>
-        </tr>
-        <tr>
             <td>Nummer</td>
             <td>{{ component.component_number }}</td>
         </tr>
         <tr>
             <td>Status</td>
             <td>{{ component.status }}</td>
+        </tr>
+        <tr>
+            <td>Erstellungsdatum</td>
+            <td>{{ component.date_created }}</td>
         </tr>
     </tbody>
 </table>   
