--- a/nanoplm/templates/create-component-instance.html
+++ b/nanoplm/templates/create-component-instance.html
@@ -12,6 +12,10 @@
             <td>{{ form.component(autocomplete="off") }}</td>
         </tr>
         <tr>
+            <td>{{ form.client.label(style="padding-right: 10px;") }}</td>
+            <td>{{ form.client(autocomplete="off") }}</td>
+        </tr>
+        <tr>
             <td></td>
             <td style="padding-top: 2rem;">{{ form.submit(style="min-width:100%;") }}</td>
         </tr>
