--- a/nanoplm/templates/read-component-instance.html
+++ b/nanoplm/templates/read-component-instance.html
@@ -22,6 +22,10 @@
             <td>{{ component_instance.component }}</td>
         </tr>
         <tr>
+            <td>Kunde</td>
+            <td>{{ component_instance.client }}</td>
+        </tr>
+        <tr>
             <td>Seriennummer</td>
             <td>{{ component_instance.serial_number }}</td>
         </tr>
