--- a/nanoplm/templates/update-file.html
+++ b/nanoplm/templates/update-file.html
@@ -13,11 +13,11 @@
         </tr>
         <tr>
             <td>{{ form.name.label(style="padding-right: 10px;") }}</td>
-            <td>{{ form.name(autocomplete="off", value=component.name) }}</td>
+            <td>{{ form.name(autocomplete="off", value=file.name) }}</td>
         </tr>
         <tr>
             <td>Erstellungsdatum</td>
-            <td>{{ component.date_created }}</td>
+            <td>{{ file.date_created }}</td>
         </tr>
         <tr>
             <td></td>
